Fix for https://issues.apache.org/activemq/browse/AMQ-1799
git-svn-id: https://svn.apache.org/repos/asf/activemq/trunk@668061 13f79535-47bb-0310-9956-ffa450edef68